src/objects/Competitive_Ananlysis_Decision_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Competitor1_Ranking__c</fullName>
        <description>Ranking of Most important things that affect buying from us</description>
        <inlineHelpText>Ranking of Most important things that affect buying from us</inlineHelpText>
        <label>Competitor1 Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor1</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Prospect_Decision_Criteria1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor2_Ranking__c</fullName>
        <description>Ranking of Most important things that affect buying from us</description>
        <inlineHelpText>Ranking of Most important things that affect buying from us</inlineHelpText>
        <label>Competitor2 Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor2</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Prospect_Decision_Criteria2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor3_Ranking__c</fullName>
        <description>Ranking of Most important things that affect buying from us</description>
        <inlineHelpText>Ranking of Most important things that affect buying from us</inlineHelpText>
        <label>Competitor3 Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor3</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Prospect_Decision_Criteria3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Ranking__c</fullName>
        <label>Owner Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Prospect_Decision_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracker__c</fullName>
        <label>Tracker</label>
        <referenceTo>Tracker__c</referenceTo>
        <relationshipName>Prospect_Decision_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Competitive Ananlysis-Decision Criteria</label>
    <nameField>
        <label>Competitive Ananlysis-Decision Criteria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitive Ananlysis-Decision Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>